dropty_api_app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dropty-api-service
spec:
  selector:
    app: dropty-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 3005
