dropty_api_app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dropty-ingress
  namespace: dropty-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: crm.dropty.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dropty-crm-service
                port:
                  number: 8000

    - host: api.dropty.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dropty-api-service
                port:
                  number: 8000

  tls:
    - hosts:
        - crm.dropty.com
        - api.dropty.com
      secretName: dropty-multi-tls
